Description claire de la mise à jour

--- a/profils/templates/profils/profil.html
+++ b/profils/templates/profils/profil.html
@@ -1,1 +1,8 @@
-<h1>Ma page profil</h1>
+{% extends 'base.html' %}
+
+{% block title %}Accueil{% endblock %}
+
+{% block content %}
+  <h2 class="text-center">Bienvenue sur DJÔSSY DE BABY</h2>
+  <p class="text-center">Ceci est la page d'accueil du site.</p>
+{% endblock %}
